# OverlayLab

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  diff.py  files.py  health.py  nodes.py  sessions.py
backend/app/core/: config.py  errors.py  models.py  schemas.py
backend/app/services/: cleanup.py  container.py  db.py  file_service.py  graph_store.py  overlay_manager.py  sqlite_overlay.py
backend/app/utils/: paths.py  subprocess_safe.py
backend/tests/: test_api.py  test_graph_store.py  test_overlay_manager.py  test_sqlite_overlay.py
docs/: README.md  backend-api-and-flows.md  backend-overlayfs-implementation.md  migration-plan.md  operations-and-troubleshooting.md  turso-agentfs-research-notes.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/: DiffViewer.tsx  FilePanel.tsx  GraphCanvas.tsx  LayerInspector.tsx  NodeContextMenu.tsx  OverlayLearningCue.tsx
frontend/src/state/: api.ts  store.ts  types.ts
frontend/src/styles/: index.css
